# aitool

./: AGENTS.md  Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/workflows/: docker-publish.yml
docs/: SPEC.md  chat.md
src/aitool/: __init__.py  __main__.py  cli.py  client.py  commands.py  models.py
src/aitool/command/: __init__.py  chat.py
tests/: test_chat.py
