[project]
name = "aitool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Andersen", email = "git@davidandersen.us" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
aitool = "aitool:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
