[project]
name = "aitool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Andersen", email = "git@davidandersen.us" }
]
requires-python = ">=3.14"
dependencies = [
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer==0.15.1",
]

[project.scripts]
aitool = "aitool:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyhamcrest>=2.1.0",
    "pytest>=9.1.0",
]
